<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <io.evercam.androidapp.custom.ThemedListPreference
        android:defaultValue="2"
        android:key="lstgridcamerasperrow"
        android:summary="@string/summary_camera_per_row"
        android:title="@string/title_camera_per_row" />
    
    <io.evercam.androidapp.custom.ThemedListPreference
        android:defaultValue="0"
        android:key="prefsAwakeTime"
        android:entries="@array/prefs_sleep_entries"
        android:entryValues="@array/prefs_sleep_entry_values"
        android:title="@string/title_awake_time" />
    
    <CheckBoxPreference
        android:key="prefsScreenRotate"
        android:title="@string/title_rotate_screen"
        android:summaryOn="@string/rotate_summery_on"
        android:summaryOff="@string/rotate_summery_off"
        android:defaultValue="true"/>

</PreferenceScreen>