<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menurefresh"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:icon="@drawable/ic_menu_refresh"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_settings"
        android:orderInCategory="2"
        android:title="@string/menu_settings"/>
        <item
        android:id="@+id/menu_manage_accounts"
        android:orderInCategory="2"
        android:title="@string/menu_manage_accounts"/>
    <item
        android:id="@+id/menu_logout"
        android:orderInCategory="3"
        android:title="@string/menu_logout"/>
    <item
        android:id="@+id/menu_about"
        android:orderInCategory="4"
        android:title="@string/menu_about"/>
</menu>